--- a/views/producto/listaDiners.twig
+++ b/views/producto/listaDiners.twig
@@ -4,7 +4,7 @@
 			<td style="background-color: #87CEFA; width: 20px; color: white; border: 1px solid white;"></td>
 			<td style="padding-right: 20px;">No Asignado</td>
 			<td style="background-color: #CCFFCC; width: 20px; color: white; border: 1px solid white;"></td>
-			<td style="padding-right: 20px;">Asignado Megacob</td>
+			<td style="padding-right: 20px;">Asignado Diners</td>
 			<td style="background-color: #FFFFCC; width: 20px; color: white; border: 1px solid white;"></td>
 			<td style="padding-right: 20px;">Asignado Usuario</td>
 			<td style="background-color: #F8F8F8; width: 20px; color: white; border: 1px solid white;"></td>
@@ -24,7 +24,7 @@
 		</thead>
 		<tbody>
 		{% for l in lista %}
-			<tr {% if l.estado == 'asignado_megacob' %} style="background-color: #CCFFCC;" {% elseif l.estado == 'asignado_usuario' %} style="background-color: #FFFFCC;" {% elseif l.estado == 'gestionado' %} style="background-color: #F8F8F8;" {% elseif l.estado == 'no_asignado' %} style="background-color: #87CEFA;" {% endif %}>
+			<tr {% if l.estado == 'asignado_diners' %} style="background-color: #CCFFCC;" {% elseif l.estado == 'asignado_usuario' %} style="background-color: #FFFFCC;" {% elseif l.estado == 'gestionado_diners' %} style="background-color: #F8F8F8;" {% elseif l.estado == 'no_asignado' %} style="background-color: #87CEFA;" {% endif %}>
 				<td>
 					{% if l.estado != 'inactivo' %}
 					<a href="{{ root }}/producto/editarDiners?id={{ l.id }}" target="_self" class="btn btn-icon btn-info" title="Ingresar Seguimiento">
