--- a/views/reportes/filtrosBaseSaldosCampo.twig
+++ b/views/reportes/filtrosBaseSaldosCampo.twig
@@ -18,7 +18,8 @@
 		</form>
 	</div>
 	<div class="card-footer">
-		<button id="btnFiltro" class="btn btn-success"><i class="glyphicon glyphicon-search"></i> Filtrar</button>
+		<button id="btnFiltroTxt" class="btn btn-success"><i class="glyphicon glyphicon-search"></i> Exportar TXT</button>
+		<button id="btnFiltroExcel" class="btn btn-success"><i class="glyphicon glyphicon-search"></i> Exportar EXCEL</button>
 		{% include "reportes/loader.twig" %}
 		<script>
             var appFiltros = new Vue({
