agregar un buscador en la barra de navegacion top

--- a/views/layout.twig
+++ b/views/layout.twig
@@ -33,6 +33,7 @@
                         <img src="{{ root }}/template_ok/images/brand/logo-3.png" class="header-brand-img light-logo1"
                              alt="logo">
                     </a>
+
                     <!-- LOGO -->
                     <div class="main-header-center ms-3 d-none d-lg-block">
                     </div>
@@ -40,6 +41,15 @@
                         <div class="navbar navbar-collapse responsive-navbar p-0">
                             <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
                                 <div class="d-flex order-lg-2">
+
+                                    <form action="#" method="get" class="ms-3">
+                                        <div class="input-group">
+                                            <input type="text" class="form-control" placeholder="Buscar por cédula" name="cedula">
+                                            <button class="btn btn-primary" type="submit">
+                                            <i class="fa fa-search"></i>
+                                            </button>
+                                        </div>
+                                    </form>
 
                                     {% if ambientePruebas %}
                                         <div class="dropdown d-flex">
@@ -217,6 +227,34 @@
 <a href="#top" id="back-to-top"><i class="fa fa-angle-up"></i></a>
 
 {{ bundle('template') }}
+
+<script>
+  document.querySelector('form').addEventListener('submit', function(event) {
+    event.preventDefault();
+    const cedula = document.querySelector('input[name="cedula"]').value;
+
+    // Realizar la solicitud AJAX para obtener el ID
+    fetch('{{ root }}/api/cliente/buscar_por_cedula?cedula=' + cedula)
+      .then(response => response.json())
+      .then(data => {
+        if (data.id) {
+          // Redirigir a la vista de seguimientos con el ID obtenido
+          window.location.href = `/global/producto/verSeguimientosDiners?id=${data.id}`;
+        } else if (data.error) {
+          // Mostrar mensaje de error personalizado
+          alert('Cédula no encontrada.');
+        } else {
+          // Manejar cualquier error inesperado
+          console.error('Error al buscar el ID:', data);
+          alert('Error al buscar el ID. Por favor, inténtalo nuevamente.');
+        }
+      })
+      .catch(error => {
+        console.error('Error al buscar el ID:', error);
+        alert('Error al buscar el ID. Por favor, inténtalo nuevamente.');
+      });
+  });
+</script>
 
 
 </body>
