--- a/views/login.twig
+++ b/views/login.twig
@@ -16,18 +16,18 @@
 	{{ bundle('validate') }}
 </head>
 
-<body class="app sidebar-mini ltr login-img">
-<!-- BACKGROUND-IMAGE -->
+<body class="inicio-img">
+
 <div class="">
-	<!-- GLOABAL LOADER -->
+
 	<div id="global-loader">
 		<img src="{{ root }}/template_ok/images/loader.svg" class="loader-img" alt="Loader"/>
 	</div>
-	<!-- /GLOABAL LOADER -->
-	<!-- PAGE -->
+	
+	
 	<div class="page">
 		<div class="">
-			<!-- CONTAINER OPEN -->
+		
 			<div class="col col-login mx-auto mt-7">
 				<div class="text-center">
 				</div>
@@ -37,7 +37,7 @@
 				<div class="wrap-login100 p-6">
 					<form class="login100-form validate-form" action="{{ root }}/login" method="post" id="frmlogin">
 						<input type="hidden" name="redirect" value="{{ redirect }}"/>
-						<span class="login100-form-title pb-5">LOGIN</span>
+						<span class="login100-form-title pb-5">Inicia Sesión en nuestro sistema</span>
 						<div class="panel panel-primary">
 							<div class="tab-menu-heading">
 								<div class="tabs-menu1">
@@ -47,36 +47,26 @@
 							<div class="panel-body tabs-menu-body p-0 pt-5">
 								<div class="tab-content">
 									<div class="wrap-input100 validate-input input-group" data-bs-validate="Valid email is required: ex@abc.xyz">
-										<a href="javascript:void(0)" class="input-group-text bg-white text-muted">
+										
+										<input type="text" class="input100 border-start-0 form-control ms-0" placeholder="Usuario" required=""
+											   value="{{ username }}" name="username" id="username">
+											   <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
 											<i class="zmdi zmdi-account text-muted" aria-hidden="true"></i>
 										</a>
-										<input type="text" class="input100 border-start-0 form-control ms-0" placeholder="Nombre de usuario" required=""
-											   value="{{ username }}" name="username" id="username">
 									</div>
 									<div class="wrap-input100 validate-input input-group" id="Password-toggle">
-										<a href="javascript:void(0)" class="input-group-text bg-white text-muted">
-											<i class="zmdi zmdi-eye text-muted" aria-hidden="true"></i>
-										</a>
+										
 										<input type="password" class="input100 border-start-0 form-control ms-0" placeholder="Contraseña" required=""
 											   name="password">
+
+											   <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
+											<i class="zmdi zmdi-eye text-muted" aria-hidden="true"></i>
+										</a>
 									</div>
 									<div class="container-login100-form-btn">
-										<button type="submit" class="login100-form-btn btn-primary">Login</button>
+										<button type="submit" class="login100-form-btn btn-danger">Ingresar</button>
 									</div>
-									{% if error %}
-										<div class="error">
-											<div class="alert alert-danger" role="alert">
-												{# <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> #}
-												<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-												{{ error }}
-											</div>
-										</div>
-									{% endif %}
-
-									{% if ambientePruebas %}
-										<br/>
-										<center><div class="label label-warning">AMBIENTE DE PRUEBAS</div></center>
-									{% endif %}
+									
 								</div>
 							</div>
 						</div>
