--- a/template_ok/colors/color1.css
+++ b/template_ok/colors/color1.css
@@ -68,7 +68,7 @@ a.text-primary:focus {
 }
 
 .table-primary {
-  background-color: #d2cdf9;
+  background-color: #9dd4d9;
 }
 
 .table-primary > th,
@@ -443,14 +443,14 @@ a.text-primary:focus {
   border-color: var(--primary-bg-color) !important;
 }
 
-.login-img {
+.inicio-img {
   position: relative;
-  background-image: url(../images/media/bg2.jpg);
+  background-image: url(../images/media/fondoglobal.jpg);
 }
 
-.login-img::before {
+.inicio-img::before {
   content: "";
-  background: linear-gradient(to right, var(--primary06) 0%, #ffffff 100%);
+  background: linear-gradient(to right, var(--primary01) 0%, #252323 100%);
   height: 100%;
   width: 100%;
   position: absolute;
