--- a/template_ok/colors/color1.scss
+++ b/template_ok/colors/color1.scss
@@ -439,7 +439,7 @@ a.text-primary {
     border-color: $primary-1 !important;
 }
 
-.login-img {
+.inicio-img {
     position: relative;
     background-image: url(../images/media/bg2.jpg);
 }
