--- a/template_ok/css/style.css
+++ b/template_ok/css/style.css
@@ -1,161 +1,7 @@
 @charset "UTF-8";
-/*------------------------------------------------------------------
-[Master Stylesheet]
-
-Project        :   sash – Bootstrap 5  Admin & Dashboard Template
-Copyright      :   Spruko Technologies Private Limited 
-Author         :   Spruko
-Author URL     :   https://themeforest.net/user/spruko
-Support	       :   support@spruko.com
-License        :   Licensed under ThemeForest License
-
--------------------------------------------------------------------*/
-/*
---- bootstrap-styles
---- accordion
---- alert
---- avatars
---- badges
---- blackquote
---- breadcrumb
---- button
---- buttons
---- cards
---- carousel
---- dropdown
---- forms
---- grid
---- input-group
---- modal
---- navigation
---- pagination
---- panel
---- popover
---- progress
---- tables
---- tags
---- thumbnail
---- tooltip
---- accordion
---- bootstrap-datepicker
---- buttons.bootstrap5
---- c3-chart
---- calendar
---- classic
---- dataTables.bootstrap
---- date-picker
---- daterangepicker
---- dtree
---- edit-table
---- fancy_fileupload
---- fileupload
---- form-wizard-demo
---- fullcalendar
---- gallery
---- intlTelInput
---- ion.rangeSlider
---- ion.rangeSlider.skinFlat
---- ion.rangeSlider.skinSimple
---- jquery.countdown
---- jquery.growl
---- jquery.timepicker
---- jquery.transfer
---- jquery-jvectormap
---- jquerysctipttop
---- jquerytransfer-icon_font
---- jquery-ui
---- leaflet
---- monolith
---- morris
---- multi
---- multiple-select
---- nano
---- notifIt
---- nv.d3
---- owl.carousel
---- perfect-scrollbar
---- quill.bubble
---- quill.snow
---- responsive.bootstrap
---- richtext
---- select2.min
---- sidebar
---- smart_wizard
---- smart_wizard_theme_arrows
---- smart_wizard_theme_circles
---- smart_wizard_theme_dots
---- spectrum
---- star-rating-svg
---- summernote
---- sumoselect
---- sweetalert
---- tabs
---- timeline
---- treeview
---- components-col
---- custom-forms
---- custom-styles
---- file-manager
---- font
---- gallery
---- highlight
---- labels
---- landing
---- list-group
---- media
---- navbar
---- pricing
---- rating
---- tabs-menu
---- timeline
---- footer
---- header
---- horizontal-menu
---- icons-list
---- loaders
---- rtl
---- datepicker
---- jvector
---- select2
---- select-group
---- default-menu
---- sidemenu-icontext
---- closed-menu
---- hover-submenu
---- hover-submenu-style1
---- calender
---- chart
---- chat
---- error-pages
---- range
---- ribbon
---- form-wizard
---- widgets
---- alignments
---- background
---- border
---- display
---- float-elements
---- height
---- margin
---- padding
---- position
---- typography
---- width
-*/
-/* ######## FONT ######## */
-/*-------- Bootstrap Framework -------*/
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap");
 
-/* ######## BOOTSTRAP ######## */
-/*Color variables*/
-/*Gradient variables*/
-/*white variables*/
-/*black variables*/
-/*shadow variables*/
-/*Dark Theme Variables*/
-/*Transparent variables*/
-/* ###### Bootstrap ###### */
+
 :root {
     --primary-bg-color: #6c5ffc;
     --primary-bg-hover: #233ac5;
@@ -236,7 +82,8 @@ section {
 
 body {
     margin: 0;
-    font-family: "IBM Plex Sans", sans-serif;
+    /* font-family: "IBM Plex Sans", sans-serif; */
+    
     font-size: 14px;
     font-weight: 400;
     line-height: 1.5;
@@ -9415,7 +9262,7 @@ progress {
 }
 
 .table-success {
-    background-color: #d2ecb8;
+    background-color: #ffffff;
 }
 
 .table-success>th,
@@ -17165,7 +17012,7 @@ table.table-bordered.dataTable thead tr:first-child td {
     color: var(--primary-bg-color) !important;
 }
 
-.login-img .page {
+.inicio-img .page {
     position: relative;
 }
 
@@ -18375,7 +18222,7 @@ img {
     text-align: center;
 }
 
-.login-img {
+.inicio-img {
     height: 100%;
     width: 100%;
     background-position: center;
