--- a/views/layout_default.twig
+++ b/views/layout_default.twig
@@ -39,7 +39,7 @@
 						{#<ul class="dropdown-menu animated fadeInRight m-t-xs">#}
 						{#<li><a href="{{ root }}/account">Mi cuenta</a></li>#}
 						{#<li class="divider"></li>#}
-						{#<li><a href="{{ root }}/logout">Logout</a></li>#}
+						{#<li><a href="{{ root }}/logout">Salir</a></li>#}
 						{#</ul>#}
 					</div>
 					<div class="logo-element">
@@ -80,7 +80,7 @@
 
 
 					<li>
-						<a href="{{ root }}/logout"><i class="fa fa-sign-out"></i> Salir</a>
+						<a href="{{ root }}/logout"><i class="fa fa-sign-out"></i>Salir</a>
 					</li>
 
 				</ul>
