--- a/template_ok/css/dark-style.scss
+++ b/template_ok/css/dark-style.scss
@@ -4985,7 +4985,7 @@ body.dark-mode *:hover::-webkit-scrollbar-thumb {
 
     .wrap-login100 {
         background: $dark-theme-1;
-        box-shadow: 0 3px 9px 0 rgba(28, 28, 51, 0.15);
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3); 
     }
 
     .login100-form-title {
