--- a/template_ok/css/skin-modes.scss
+++ b/template_ok/css/skin-modes.scss
@@ -24,8 +24,8 @@
     }
     .app-header,
     .hor-header {
-        background: $primary-1;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        background: $dark-body;
+        border-bottom: 1px solid rgba(240, 0, 0, 0.1);
     }
     .app-sidebar__toggle:hover {
         color: #fff;
