--- a/template_ok/scss/_variables.scss
+++ b/template_ok/scss/_variables.scss
@@ -88,7 +88,7 @@ $dark-theme3:#181d3e;
 
 $dark-body:#1a1a3c;
 $dark-theme-1:#2a2a4a;
-$text-color:#dedefd;
+$text-color:#0d0d16;
 $border-dark:rgba(255, 255, 255, 0.1);
 $dark-card-shadow:0 3px 9px 0 rgba(28, 28, 51, 0.15);
 
