--- a/template_ok/colors/color1.scss
+++ b/template_ok/colors/color1.scss
@@ -444,7 +444,7 @@ a.text-primary {
     background-image: url(../images/media/bg2.jpg);
 }
 
-.login-img::before {
+.inicio-img::before {
     content: '';
     background: linear-gradient(to right, $primary-06 0%, #05c3fb91 100%);
     height: 100%;
