--- a/template_ok/scss/custom/_custom-styles.scss
+++ b/template_ok/scss/custom/_custom-styles.scss
@@ -4152,6 +4152,7 @@ table.table-bordered.dataTable thead tr:first-child td {
     background: #fff;
     overflow: hidden;
     flex-wrap: wrap;
+    
     justify-content: space-between;
     padding: 137px 130px 137px 95px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.06);
@@ -4161,14 +4162,14 @@ table.table-bordered.dataTable thead tr:first-child td {
 
 .container-login100 {
     width: 100%;
-    height: 100%;
+    height: 50%;
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
     display: -ms-flexbox;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    margin-left: 20px;
     align-items: center;
     padding: 15px;
     z-index: 999;
