--- a/views/layout.twig
+++ b/views/layout.twig
@@ -20,19 +20,14 @@
 
 <div class="page">
     <div class="page-main">
-        <!-- APP-HEADER -->
+        
         <div class="app-header header sticky">
             <div class="container-fluid main-container">
                 <div class="d-flex">
                     <a aria-label="Hide Sidebar" class="app-sidebar__toggle" data-bs-toggle="sidebar"
                        href="javascript:void(0)"></a>
 
-                    <a class="logo-horizontal " href="{{ root }}">
-                        <img src="{{ root }}/template_ok/images/brand/logo.png" class="header-brand-img desktop-logo"
-                             alt="logo">
-                        <img src="{{ root }}/template_ok/images/brand/logo-3.png" class="header-brand-img light-logo1"
-                             alt="logo">
-                    </a>
+                   
 
                     <!-- LOGO -->
                     <div class="main-header-center ms-3 d-none d-lg-block">
@@ -40,6 +35,10 @@
                     <div class="d-flex order-lg-2 ms-auto header-right-icons">
                         <div class="navbar navbar-collapse responsive-navbar p-0">
                             <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+
+                                   
+
+                            
                                 <div class="d-flex order-lg-2">
 
                                     <form action="#" method="get" class="ms-3">
@@ -50,7 +49,10 @@
                                             </button>
                                         </div>
                                     </form>
-
+                                     <form action="#" method="get" class="ms-3">
+                                        <small class="text-muted">{{ user.nombres }}
+                                                        &nbsp;{{ user.apellidos }}</small>
+                                    </form>
                                     
                                   
 
@@ -70,8 +72,7 @@
                                         <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                                             <div class="drop-heading">
                                                 <div class="text-center">
-                                                    <small class="text-muted">{{ user.nombres }}
-                                                        &nbsp;{{ user.apellidos }}</small>
+                                                    
                                                 </div>
                                             </div>
                                             <div class="dropdown-divider m-0"></div>
@@ -98,7 +99,7 @@
         <div class="sticky">
             <div class="app-sidebar__overlay" data-bs-toggle="sidebar"></div>
             <div class="app-sidebar">
-                <div class="side-header">
+                <div class="side-header" >
                     <a class="header-brand1" href="{{ root }}">
                         <img src="{{ root }}/template_ok/images/brand/logo.png" class="header-brand-img desktop-logo"
                              alt="logo">
