--- a/views/login.twig
+++ b/views/login.twig
@@ -28,13 +28,10 @@
 	<div class="page">
 		<div class="">
 		
-			<div class="col col-login mx-auto mt-7">
-				<div class="text-center">
-				</div>
-			</div>
+			
 
 			<div class="container-login100">
-				<div class="wrap-login100 p-6">
+				<div class="wrap-login100 ">
 					<form class="login100-form validate-form" action="{{ root }}/login" method="post" id="frmlogin">
 						<input type="hidden" name="redirect" value="{{ redirect }}"/>
 						<span class="login100-form-title pb-5">Inicia Sesión en nuestro sistema</span>
